# SmartNutritionServer

./: CMakeLists.txt  Jenkinsfile  main.cpp  requirements.sh  run.sh
data/: feedback.json  food_items.json  rating.json  users.json  users.txt
data/logs/: server_log.txt  statistics.txt
include/: DietPlan.hpp  DrinkableFoodItem.hpp  Feedback.hpp  FoodCategory.hpp  FoodItem.hpp  JsonManager.hpp  Logger.hpp  NutritionServer.hpp  Observer.hpp  QuantitableFoodItem.hpp  SocketServer.hpp  Statistics.hpp  User.hpp  WeightableFoodItem.hpp
include/middlewares/: Cors.hpp
lib/cmake/Crow/: CrowTargets.cmake
routes/: NutritionRoutes.cpp  NutritionRoutes.hpp  Routes.cpp  Routes.hpp
src/: DietPlan.cpp  DrinkableFoodItem.cpp  Feedback.cpp  FoodCategory.cpp  FoodItem.cpp  Logger.cpp  NutritionServer.cpp  QuantitableFoodItem.cpp  SocketServer.cpp  Statistics.cpp  User.cpp  WeightableFoodItem.cpp
